--- a/cryptography/Cargo.toml
+++ b/cryptography/Cargo.toml
@@ -28,6 +28,7 @@ rand_chacha.workspace = true
 rand_core.workspace = true
 rayon = { workspace = true, optional = true }
 sha2.workspace = true
+serde.workspace = true
 thiserror.workspace = true
 x25519-dalek = { workspace = true, features = ["zeroize"] }
 zeroize = { workspace = true, features = ["zeroize_derive"] }
